Nå funker både edit og se brukerprofil

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@
     color: red;
 }
 
+.skillselect{
+    width: 69%;
+    height: 10rem;
+}
+
 .container h1 {
     color:#1273E2;
     font-weight: 700;
