--- a/css/main.css
+++ b/css/main.css
@@ -40,13 +40,27 @@
 }
 
 .applicationStatusBadge {
-    width: 60px;
+    width: 100px;
     height: 25px;
     color: #1A4314;
     background-color: #94C973;   
     border-radius: 15px;
     margin-left: 6rem;
     font-weight: 600;
+    text-align: center;
+    align-items: center;
+}
+
+.statusReject {
+    width: 100px;
+    height: 25px;
+    color: #BD1C44;
+    background-color:#FFAEBC;   
+    border-radius: 15px;
+    margin-left: 6rem;
+    font-weight: 600;
+    text-align: center;
+    align-items: center;
 }
 
 .applicationDeadlineDateBadge {
@@ -57,7 +71,8 @@
     background-color: #FFAEBC;   
     border-radius: 20px;    
     font-weight: 600;  
-    font-size: 15px;    
+    font-size: 15px;   
+    text-align: center; 
 }
 
 .autoFillInfoButton {
@@ -85,6 +100,7 @@
     font-size: 14px;  
     box-shadow: inset 0 0 0 0 #1273E2;  
     margin-right: 7px;
+    
 }
 .editButton:hover {
     box-shadow: inset 0 0 0 50px #0d47a1;  
@@ -92,14 +108,14 @@
 }
 
 .deleteButton {
-    width: 70px;
+    width: 90px;
     height: 30px;   
     color: white;
     background-color: #bd091c;
     border: none;
     border-radius: 5px;
     font-size: 14px;
-    margin-right: 5px;
+    margin-right: 5px;  
     
 }
 .deleteButton:hover {
@@ -331,5 +347,22 @@
 .candidate-jobapplication:hover {
     border-color: white;
 }
+
+.profilePicture {
+    width: 50%;
+    margin-left: 100px;
+    margin-top: 30px;
+    
+}
+
+.header {
+    font-weight: 600;
+}
+
+.content {
+    margin-left: 1.5rem;
+    margin-top: 3px;
+}
+
 
 
